--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "intercogni_react_line",
-  "version": "0.0.2-2",
-  "description": "—create lines in react user interfaces",
-  "main": "index.tsx",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Oportunitas/intercogni_react_line.git"
-  },
-  "author": "Oportunitas (Taib Izzat Samawi)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Oportunitas/intercogni_react_line/issues"
-  },
-  "homepage": "https://github.com/Oportunitas/intercogni_react_line#readme",
-  "dependencies": {
-    "react": "^18.2.0"
-  }
+    "name": "intercogni_react_line",
+    "version": "1.0.0",
+    "description": "—create lines in react user interfaces",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "scripts": {
+        "build": "tsc --outDir dist",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Oportunitas/intercogni_react_line.git"
+    },
+    "author": "Oportunitas (Taib Izzat Samawi)",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Oportunitas/intercogni_react_line/issues"
+    },
+    "homepage": "https://github.com/Oportunitas/intercogni_react_line#readme",
+    "dependencies": {
+        "lodash": "^4.17.21",
+        "react": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.10",
+        "@types/react": "^18.2.38",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "tsup": "^8.0.1",
+        "typescript": "^5.3.2",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4"
+    }
 }
